# proyecto_integrador

./: CMakeLists.txt  lista_videos.txt  main.cpp  pelicula.cpp  pelicula.h  serie.cpp  serie.h  sonar-project.properties  videos.cpp  videos.h
.github/workflows/: build.yml
test/: test_pelicula.cpp  test_pelicula1.cpp  test_serie.cpp  test_videos.cpp
